--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="home-blog clearfix">
             <ul>
 
-              <!-- Begin Profile -->
+              <!-- Begin MARTY MCFLY-->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Profile -->
+              <!-- End MARTY MCFLY -->
 
               <!-- Begin Profile -->
               <li class="home-blog-post">
