--- a/index.html
+++ b/index.html
@@ -110,6 +110,19 @@
                 <div class="clear"></div>
               </li>
               <!-- End MARTY MCFLY -->
+              
+              <!-- Begin DOC BROWN -->
+<li class="home-blog-post">
+  <div class="blog-thumb">
+    <a href="students/doc_brown.html">
+      <img width="304" height="304" class="prof-image" src="img/students/doc_brown_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
+    </a>
+  </div>
+ 
+... (MORE CODE) ...
+ 
+</li>
+<!-- End DOC BROWN -->
 
               <!-- Begin Profile -->
               <li class="home-blog-post">
